--- a/app/views/css/styles.css
+++ b/app/views/css/styles.css
@@ -2,3 +2,17 @@ body,html{
     height: 100%;
     width: 100%;
 }
+.main-container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main-container > .login,
+.main-container > .hero-body{
+    height: auto;
+    width: 100%;
+    min-width: 300px;
+    max-width: 400px;
+}
